@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.184 2004-07-12 16:55:12 jhoeller Exp $
+$Id: changelog.txt,v 1.185 2004-07-22 13:14:17 trisberg Exp $
 
 
 Changes in version 1.1 RC1 (19.7.2004)
@@ -54,6 +54,7 @@ Package org.springframework.ejb
 * added explicit proxy type checks to LocalSlsbInvokerInterceptor and AbstractRemoteSlsbInvokerInterceptor
 
 Package org.springframework.jdbc
+* added support for wildcard match on database product name like "DB2*" for SqlErrorCodesFactory
 * added support for retrieving auto generated keys to SqlUpdate and JdbcTemplate
 * added translation category for CannotAcquireLockException to SqlErrorCodeSQLExceptionTranslator and sql-error-codes
 * allow for defining custom translations using CustomSQLErrorCodesTranslation defined in the sql-error-codes.xml file
